--- a/login.html
+++ b/login.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gNexus - LOGIN</title>
+    <link rel="stylesheet" href="./_css/styleLoginNexus.css">
 </head>
 <body>
-    
+    <h1 class="titulo">LOGIN</h1>
 </body>
 </html>
