Estibilização básica da tela de login.

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container">
-        <img src="./_img/undraw_enter-password_1kl4.svg" width="380px">
+        <img src="./_img/undraw_enter-password_1kl4.svg" width="380px" id="banner">
 
         <div class="card-login">
             <div id="header">
