Responsividade do container e outros itens dentro dele; Teste de uso em Modal para solicitar cadastro.

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container">
-        <img src="./_img/undraw_enter-password_1kl4.svg" width="380px" id="banner">
+        <img src="./_img/undraw_enter-password_1kl4.svg" id="banner">
 
         <div class="card-login">
             <div id="header">
@@ -19,27 +19,54 @@
             </div>
 
             <div id="carga-login">
-                <form action="#" method="post">
+                <form method="get">
                     <div class="col-lm-3">
                         <div class="input-group">
                             <div class="input-group-text">@</div>
-                            <input type="email" class="form-control" id="email" placeholder="E-mail" required>
+                            <input type="email" class="form-control" id="email" placeholder="E-mail">
                         </div>
                     </div>
                     <div class="col-lm-3">
                         <div class="input-group">
                             <div class="input-group-text"><i class="bi bi-key-fill"></i></div>
-                            <input type="password" class="form-control" id="password" placeholder="Digite sua senha." required>
+                            <input type="password" class="form-control" id="password" placeholder="Digite sua senha.">
                         </div>
                     </div>
                     <div class="form">
                         <button type="submit" class="btn btn-success">ENTRAR</button> | 
-                        <a href="#">Solicite já o seu acesso!</a>
-
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="">Solicite seu acesso</button>
                     </div>
                 </form>
             </div>
         </div>
+    </div>
+
+    <!-- Modal de Cadastro -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Solicitar Cadastro gNexus</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form>
+            <div class="mb-3">
+                <label for="email" class="col-form-label">E-mail</label>
+                <input type="email" class="form-control" id="email" required placeholder="Email institucional gNexus">
+            </div>
+            <div class="mb-3">
+                <label for="matricula" class="col-form-label">Matrícula</label>
+                <input type="text" class="form-control" id="matricula" required>
+            </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            <button type="button" class="btn btn-primary">Enviar solicitação</button>
+        </div>
+        </div>
+    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
