Desenvolvendo index; Inserção de imagem de banner; Inclusão de funções para comportamento de página e modal.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gNexus - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./_img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./_css/styleNexus.css">
 </head>
 <body>
+    <main>
+        <aside>
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="#">Cliente</a>
+                        <ul class="submenu">
+                            <li><a href="#">Cadastrar</a></li>
+                            <li><a href="#">Consultar</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Chamados</a>
+                        <ul class="submenu">
+                            <li><a href="#">Abrir Chamado</a></li>
+                            <li><a href="#">Consultar Chamados</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Rede</a></li>
+                    <li><a href="#">Ativos</a>
+                        <ul class="submenu">
+                            <li><a href="#">Cadastrar Ativo</a></li>
+                            <li><a href="#">Consultar Ativos</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="login.html">Sair</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <section>
+            <div class="container">
+                <div class="banner">
+                    <h1>Bem-vindo ao gNexus</h1>
+                    <p>Seu portal de gerenciamento de rede e suporte técnico.</p>
+                </div>
+                <img src="./_img/undraw_shared-workspace_6y9d.svg" id="banner">
+            </div>
+        </section>
+    </main>
+
     
 </body>
 </html>
